fix margin, padding, and overflow

--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -1,3 +1,10 @@
+* {
+  padding: 0;
+  margin: 0;
+}
+body{
+  overflow: hidden;
+}
 .main-container {
   display: flex;
   flex-direction: column;
